--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 body {
 	margin: 0;
 	padding: 0;
@@ -94,6 +96,17 @@ break the positioning of the outputs during animation. */
 .time-display-divider {
 }
 
+button {
+	border: none;
+	outline: none;
+	padding: 1em;
+	background-color: #495057;
+	color: white;
+	font-family: sans-serif;
+	font-size: 20px;
+	text-transform: uppercase;
+}
+
 .controls {
 	margin-top: 1em;
 }
@@ -107,18 +120,73 @@ break the positioning of the outputs during animation. */
 	margin-left: 1em;
 }
 
-button {
-	border: none;
-	outline: none;
-	padding: 1em;
-	background-color: #495057;
-	color: white;
-	font-family: sans-serif;
-	font-size: 20px;
-	text-transform: uppercase;
+/* TODO Feedback when the button got pressed */
+
+.timer-list {
+	margin-top: 1em;
 }
 
-/* TODO Feedback when the button got pressed */
+.timer-list button {
+	width: 100%;
+}
+
+#dialogs {
+	display: none;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.7);
+}
+
+.dialog-open #dialogs {
+	display: flex;
+}
+
+#dialogs dialog {
+	display: none;
+	position: absolute;
+	z-index: 1;
+	box-sizing: border-box;
+	padding: 0;
+	border: 2px solid #343a40;
+	color: white;
+	background-color: #343a40;
+}
+
+#dialogs dialog.dialog-open {
+	display: block;
+}
+
+#timer-dialog {
+	width: 80%;
+	height: 50%;
+}
+
+#frm--set-timeout {
+	height: 100%;
+}
+
+.time-selector {
+	display: flex;
+	height: calc(100% - 63px);
+}
+
+.time-selector input {
+	flex-grow: 1;
+	box-sizing: border-box;
+	height: 100%;
+	text-align: center;
+	font-size: 7vw;
+}
+
+#timer-dialog button {
+	width: 100%;
+	line-height: 23px;
+}
+
 
 #out--state-debug {
 	display: block;
