--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,7 @@ break the positioning of the outputs during animation. */
 }
 
 .time-display-divider {
+	font-size: 16vw;
 }
 
 button {
@@ -110,7 +111,7 @@ button {
 	cursor: pointer;
 }
 
-button:after {
+button::after {
 	content: "";
 	background: #868e96;
 	display: block;
@@ -124,7 +125,7 @@ button:after {
 	transition: all 0.3s;
 }
 
-button:active:after {
+button:active::after {
 	top: 50%;
 	left: 50%;
 	width: 0;
